syntax = "proto2";
message DeviceDescriptor{
	required string iManufacturer = 1;
	required string iProduct = 2;
	required uint32 bMaxPacketSize0 = 3;
}
message HIDReport{
	required string data = 1;
}
message InputReport{
	required string data = 1;
}
message UnionMessage{
	optional DeviceDescriptor device_descriptor = 1;
	optional HIDReport hid_report = 2;
	optional InputReport input_report = 3;
}
message Packet{
	required string data = 1;
	required uint32 sequence_number = 2;
	required uint32 crc = 3;
	enum Flag {
		FIRST = 0;
		CONTINUE = 1;
		LAST = 2;
		FIRSTLAST = 3;
	}
	required Flag flag = 4;
}